2014-11-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnutls.c (Fgnutls_peer_status): Check GNUTLS_INITSTAGE, not gnutls_p.

2014-11-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnutls.c: Fix compilation warnings given fix --enable-gcc-warnings.

2014-11-24  Glenn Morris  <rgm@gnu.org>

	* emacs.c (main) <--version>: Make use of PACKAGE_NAME.

	* Makefile.in (emacs.res): Use ../nt rule, rather than duplicating it.
	(ntsource, WINDRES, EMACS_MANIFEST): Remove, now unused.

2014-11-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnutls.c: Fix Windows function definition of
	gnutls_x509_crt_get_fingerprint.

	* gnutls.c: Fix Windows return value for gnutls_pk_algorithm_get_name.

	* gnutls.c (Fgnutls_boot): Save certificate for later inspection.

	* process.h: Added more fields to Lisp_Process to track
	certificate details.

	* gnutls.c (gnutls_hex_string, gnutls_certificate_details)
	(Fgnutls_peer_status): New functions to export TLS certificate
	details to Emacs Lisp.

2014-11-23  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (gtk_adjustment_configure): Define for Gtk+ < 2.14.
	(xg_set_toolkit_horizontal_scroll_bar_thumb): Remove wrong version
	check for gtk_adjustment_configure (Bug#19149).
	(gtk_adjustment_configure): Don't use 2.14 functions (Bug#19149).

2014-11-22  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (emacs.res): Add dependency on icons/hand.cur.  Use $<.

2014-11-22  Martin Rudalics  <rudalics@gmx.at>

	Don't shrink frame when using desktop-save-mode (Bug#19048).
	* w32fns.c (x_set_tool_bar_lines): Always call
	x_change_tool_bar_height (Bug#19048).
	(x_change_tool_bar_height): Mark frame as garbaged since
	adjust_frame_size might not have done that.
	* xfns.c (x_set_tool_bar_lines): Always call
	x_change_tool_bar_height (Bug#19048).
	(x_change_tool_bar_height): Mark frame as garbaged since
	adjust_frame_size might not have done that.

2014-11-21  Ulf Jasper  <ulf.jasper@web.de>

	* xml.c (parse_region): Take care of new optional parameter